[project]
name = "mcp-nano-banana"
version = "0.2.2"
requires-python = ">=3.10"
description = "MCP server for image generation via Google Gemini + HTTP bridge (FastAPI) used by ImageOps."
readme = "README.md"
dependencies = [
    "mcp[cli]>=1.13",
    "google-generativeai>=0.5.4",
    "python-dotenv>=1.0.1",
    "pillow>=11.3.0",
    # --- HTTP bridge deps ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/GuilhermeAumo/mcp-nano-banana"
Repository = "https://github.com/GuilhermeAumo/mcp-nano-banana"

[project.scripts]
mcp-nano-banana = "mcp_nano_banana.main:main"

[tool.setuptools.packages.find]
where = ["src"]
